# ucc

./: .readthedocs.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  test.yml  ucc-benchmarks.yml
benchmarks/results/: expval_2025-02-27_18.csv  expval_2025-04-03_13.csv  gates_2025-02-11_22.csv  gates_2025-02-26_11.csv  gates_2025-02-26_13.csv  gates_2025-02-27_18.csv  gates_2025-03-04_13.csv  gates_2025-03-07_18.csv  gates_2025-03-07_19.csv  gates_2025-03-12_14.csv  gates_2025-04-03_13.csv
benchmarks/results.local/: gates_2025-03-07_17.csv  gates_2025-03-07_22.csv  gates_2025-03-12_17.csv  gates_2025-03-13_11.csv
benchmarks/scripts/: common.py  expval_benchmark.py  plot_avg_benchmarks_over_time.py  potential-observables.py  run_benchmarks.sh
benchmarks/tests/: test_common.py
docs/source/: contributing.rst  dev.rst  user_guide.rst
ucc/: compile.py
ucc/tests/: test_compile.py
ucc/transpilers/: ucc_defaults.py
