[project]
name = "ucc"
version = "0.4.2"
description = "Unitary Compiler Collection: A quantum circuit interface and compiler for multiple quantum frameworks"
authors = [
    {name="Jordan Sullivan", email="jordan@unitary.foundation"},
    {name="Misty Wahl"},
    {name="Nate Stemen"}
]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/unitaryfund/ucc"
requires-python = ">=3.12"
dependencies = [
    "cirq-core>=1.4.1",
    "ply>=3.11",
    "pytket>=1.40.0",
    "qbraid>=0.9.3",
    "qiskit>=1.3.2",
    "qiskit-qasm3-import>=0.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
docs = [
    "myst-parser>=4.0.0",
    "sphinx>=8.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

